5.0.3
	+ Provide transitional dummy packages for services and objects
	+ Fix regression enforcing 127.0.0.1 as nameserver in ADC mode
5.0.2
	+ Make sure 127.0.0.1 is always used as nameserver with zentyal-samba
5.0.1
	+ Fix DHCP hooks
	+ Fix module restart in postinst
5.0
	+ Integrate objects and services modules inside network
	+ Use Net::Interface instead of IO::Interface::Simple, which
	  seems buggy with new interface naming
4.2.2
	+ Fix regression in initial modules enable after last change
4.2.1
	+ Avoid race condition between saving changes and failover cron job
4.2
	+ Update version to 4.2
4.1.1
	+ Remove leftovers of bonding and bridged mode
4.1
	+ Remove multi-gateway functionality (balancing, failover, etc)
	+ Remove support for PPPoE, bridged and bundled interfaces
	+ Remove no longer maintained ddclient integration
4.0
	+ Drop Zentyal-provided Dynamic DNS
	+ WAN failover now uses cron instead of old events module
	+ Set version to 4.0
	+ Check external IP against different providers to be more reliable
	+ Refactor and include internalNetworks method used by dns and
	  openchange modules
	+ Fixed problem in gateway table when gateways go away when
	  syncing rows
	+ Added vlans key as exclude replication key
	+ Add nameserverDelete and nameserverAdded callbacks to NetworkObserver
3.5.1
	+ Added defensive code to DNSResolver to avoid ifaces down after crash
3.5
	+ Changed ifup coditions on first time save
	+ Changed validation of setDHCPAddress, setRealPPPIface and
	  DHCPCleanUp to allow pseudoterminal interfaces, this is needed for l2tp
	+ Allow network proxy which is listening on localhost
	+ Fixed error which skipped the execution of _preSetConf
	+ Added No-IP to DynDNS
	+ Fix get router MAC after latest changes in Net::ARP library
	+ Updated DynDNS server in ddclient configuration
	+ Set version to 3.5
	+ Fixed wrong call when cleaning up a bundled interface
3.4
	+ Import current DHCP addresses in first setup and when enabling module